Fixed News heading color on mobile

--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -295,7 +295,7 @@ $content-width: 1145px;
         .home-heading {
             margin-top: 18px;
             &.heading-white {
-                color: inherit;
+                color: $color-primary;
                 border-color: $color-secondary;
             }
         }
